	Fixed bug where pre elements could be incorrectly modified by an IE bug workaround. Patch contributed by hu vime.
	Fixed bug where input elements inside inlinepopups wasn't editable in Firefox 2.
	Fixed bug where the xhtmlxtras plugin wasn't replacing attribute values correctly.
	Fixed bug where menu buttons in skin variants would look strange due to IE 8 fixes.
Version 3.2.1 (2008-11-04)
	Added support for custom icon image for drop menus. Use icon_src to set a custom image directly.
	Added new media_strict option to media plugin. Enables you to control if the flash embed is strict or not. Enabled by default.
	Fixed so the editors script files gets dynamically loaded without using XHR or eval.
	Fixed so the media plugin outputs valid XHTML object elements for Flash movies. Can be disabled with the media_strict option.
	Fixed so dynamic loading doesn't require eval calls on non IE browsers for better Air support.
	Fixed bug where the editor wasn't treated as empty if the remaining paragraph had attributes.
	Fixed bug where id's of elements was removed ones they got wrapped in paragraphs. Patch contributed by ChronoZ.
	Fixed bug where WebKit browsers where placing list elements inside paragraph elements.
	Fixed bug where inserting images or links would produce absolute urls on WebKit browsers.
	Fixed bug where values for checked, readonly, disabled and selected attributes was incorrect on IE.
	Fixed bug where positive values for checked, readonly, disabled and selected attributes wasn't forced to valid values.
	Fixed bug where selecting the first option in a native select box would produce an undefined error.
	Fixed bug where tabindex 32768 could be outputted on IE if element attributes where cloned.
	Fixed bug where the media dialogs preview window would display incorrect contents due to duplicate clsid prefixes.
	Fixed bug where non pixel or percent heights for textarea elements would produce errors on IE.